<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_new_talent"
        android:icon="@drawable/plus"
        android:title="@string/menu_new_talent"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_edit_attr"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/menu_edit_attr" />
    <item
        android:id="@+id/menu_talent_settings"
        android:checkable="false"
        android:title="@string/menu_talent_settings">
        <menu>
            <item
                android:checkable="true"
                android:checked="true"
                android:title="@string/talent_roll_style_menu"
                android:tooltipText="@string/talent_roll_style_menu_text" />
            <item android:title="Item" />
            <item android:title="Item" />
        </menu>
    </item>
</menu>