<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_E_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/attr_co"
                android:textAlignment="center" />

            <NumberPicker
                android:id="@+id/attr_picker_0"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_E_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/attr_cl"
                android:textAlignment="center" />

            <NumberPicker
                android:id="@+id/attr_picker_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_E_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/attr_in"
                android:textAlignment="center" />

            <NumberPicker
                android:id="@+id/attr_picker_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_E_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/attr_ch"
                android:textAlignment="center" />

            <NumberPicker
                android:id="@+id/attr_picker_3"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_E_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/attr_de"
                android:textAlignment="center" />

            <NumberPicker
                android:id="@+id/attr_picker_4"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_E_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/attr_ag"
                android:textAlignment="center" />

            <NumberPicker
                android:id="@+id/attr_picker_5"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_E_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/attr_cn"
                android:textAlignment="center" />

            <NumberPicker
                android:id="@+id/attr_picker_6"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_E_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/attr_st"
                android:textAlignment="center" />

            <NumberPicker
                android:id="@+id/attr_picker_7"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>