<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	tools:context=".Dice">

	<ListView
		android:id="@android:id/list"
		android:layout_width="fill_parent"
		android:layout_height="100sp"
		android:layout_weight="1"
		android:stackFromBottom="true"
		android:transcriptMode="alwaysScroll"
		/>
	<TextView android:id="@+id/android:empty"
		android:layout_width="fill_parent"
		android:layout_height="100sp"
		android:layout_weight="1"
		android:textSize="20sp"
		android:gravity="center"
		android:text="@string/log_empty"
		/>
	<TextView android:id="@+id/rollresult"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/roll_placeholder"
		android:textColor="#c0c090"
		android:textSize="40sp"
		android:gravity="center"
		android:singleLine="true"
		android:ellipsize="middle"
		/>
	<LinearLayout
		android:orientation="horizontal"
		android:gravity="center"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		style="?android:attr/buttonBarStyle"
		>

		<Button
			android:id="@+id/die0"
			android:layout_weight="1"
			android:layout_width="100sp"
			android:layout_height="55sp"
			style="?android:attr/buttonBarButtonStyle"
			/>
		<Button
			android:id="@+id/die1"
			android:layout_weight="1"
			android:layout_width="100sp"
			android:layout_height="55sp"
			style="?android:attr/buttonBarButtonStyle"
			/>
		<Button
			android:id="@+id/die2"
			android:layout_weight="1"
			android:layout_width="100sp"
			android:layout_height="55sp"
			style="?android:attr/buttonBarButtonStyle"
			/>
		<Button
			android:id="@+id/die3"
			android:layout_weight="1"
			android:layout_width="100sp"
			android:layout_height="55sp"
			style="?android:attr/buttonBarButtonStyle"
			/>
		<Button
			android:id="@+id/more"
			android:layout_weight="1"
			android:layout_width="70sp"
			android:layout_height="55sp"
			android:text="..."
			/>

		<Button
			android:id="@+id/talent_intent"
			android:layout_width="150sp"
			android:layout_height="55sp"
			android:layout_weight="2"
			android:text="@string/talents_button"
			android:textAllCaps="false"
			android:textStyle="italic"
			style="?android:attr/buttonBarButtonStyle"/>
	</LinearLayout>

</LinearLayout>
