<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_talent_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/new_talent_hint"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attribute_text"
                android:textAlignment="textStart" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <NumberPicker
                    android:id="@+id/tAttrPicker0"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <NumberPicker
                    android:id="@+id/tAttrPicker1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <NumberPicker
                    android:id="@+id/tAttrPicker2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/talent_value_caption" />

            <NumberPicker
                android:id="@+id/talentValPicker"
                android:layout_width="wrap_content"
                android:layout_height="50dp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>